Create user's past searches table on user page

--- a/app/views/drugs/show.html.haml
+++ b/app/views/drugs/show.html.haml
@@ -19,8 +19,9 @@
     %br
     %br
 
-    %p.text-center.log-in-or-create-account
-      Want to save your searches?
-      %br
-      = link_to "Log in", "/"
+    - if !current_user
+      %p.text-center.log-in-or-create-account
+        Want to save your searches?
+        %br
+        = link_to "Log in", "/"
   .col-md-1
