--- a/app/views/drugs/show.html.haml
+++ b/app/views/drugs/show.html.haml
@@ -1,27 +1,1 @@
-%br
-%br
-
-.row
-  .col-md-1
-  .col-md-10.well.results-well
-    %h1.results-page-header.text-center
-      = @drug.name.upcase
-      %br
-      %br
-      = gluten_free_or_not_message(@drug)
-
-    %br
-
-    .text-center
-      = additional_info_or_search_again_button(@drug)
-
-    %br
-    %br
-    %br
-
-    - if !current_user
-      %p.text-center.log-in-or-create-account
-        Want to save your searches?
-        %br
-        = link_to "Log in", "/"
-  .col-md-1
+= render partial: "drugs/_drug", locals: { drug: @drug }
